nine: install the nine module/library to the correct location
Signed-off-by: Emil Velikov <emil.l.velikov@gmail.com>

--- a/src/gallium/targets/d3dadapter9/Makefile.am
+++ b/src/gallium/targets/d3dadapter9/Makefile.am
@@ -47,7 +47,8 @@ AM_CPPFLAGS = \
 
 endif
 
-lib_LTLIBRARIES = d3dadapter9.la
+ninedir = $(D3D_DRIVER_INSTALL_DIR)
+nine_LTLIBRARIES = d3dadapter9.la
 
 d3dadapter9_la_SOURCES = \
 	getproc.c \
