--- a/src/gallium/targets/d3dadapter9/Makefile.am
+++ b/src/gallium/targets/d3dadapter9/Makefile.am
@@ -50,6 +50,9 @@ endif
 ninedir = $(D3D_DRIVER_INSTALL_DIR)
 nine_LTLIBRARIES = d3dadapter9.la
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = d3d.pc
+
 d3dadapter9_la_SOURCES = \
 	getproc.c \
 	drm.c
