--- a/src/SConscript
+++ b/src/SConscript
@@ -24,6 +24,7 @@ SConscript('mapi/glapi/SConscript')
 # Haiku C++ libGL dispatch (renderers depend on libgl)
 if env['platform'] in ['haiku']:
     SConscript('hgl/SConscript')
+    SConscript('egl/drivers/dri2/SConscript')
 
 SConscript('mesa/SConscript')
 
@@ -32,7 +33,7 @@ SConscript('mapi/vgapi/SConscript')
 if not env['embedded']:
     if env['platform'] not in ('cygwin', 'darwin', 'freebsd', 'haiku', 'windows'):
         SConscript('glx/SConscript')
-    if env['platform'] not in ['darwin', 'haiku', 'sunos']:
+    if env['platform'] not in ['darwin', 'sunos']:
         SConscript('egl/main/SConscript')
 
     if env['gles']:
